Fix music store button spacing on music page.

--- a/wp-content/themes/sparkart/css/src/sparkart-extend.scss
+++ b/wp-content/themes/sparkart/css/src/sparkart-extend.scss
@@ -956,14 +956,25 @@ p.release__date {
     display: flex;
     flex-wrap: wrap;
     margin: 0 -5px;
-    a {
-      margin: 5px;
+    .album-store {
+      width: 50%;
+      padding: 5px;
+      flex: 0 0 50%;
+      @media (min-width: 992px) {
+        width: 33.33%;
+        flex: 0 0 33.33%;
+      }
     }
     .btn-primary {
       transition: opacity 0.15 -ease-in;
-      font-size: 12px;
+      font-size: 10px;
       line-height: 1;
-      padding: 7px;
+      letter-spacing:0;
+      padding: 12px 3px;
+      width: 100%;
+      @media (min-width: 600px) {
+        font-size: 12px;
+      }
       &:focus, &:hover {
         opacity: 0.65;
       }
